Padding fix on mobile for 769

--- a/html/css/giving-styles.css
+++ b/html/css/giving-styles.css
@@ -3877,6 +3877,11 @@ form.text-left input:not([type="checkbox"]) { text-align: left; }
      div#sortable{margin-top:10px !important;}
 
      /* 769 */
+     .table-actions.pg480{
+        padding-left:20px;
+        padding-right:20px;
+     }
+     .table-actions.pg480 .show-select{padding-bottom: 20px;}
      button#saveAttendees{width: 208px !important;}
      #subAttendees button:first-child{width: auto !important;}
      #subAttendees button.dropdown-toggle{width: 50px;}
